minor: button overflow fixes

--- a/wp-content/themes/carl_manlan/assets/styles/output.css
+++ b/wp-content/themes/carl_manlan/assets/styles/output.css
@@ -1705,8 +1705,9 @@
   border-radius: calc(infinity * 1px);
   padding-inline: calc(var(--spacing) * 6);
   padding-block: calc(var(--spacing) * 2);
+  text-align: center;
   text-transform: uppercase;
-  min-width: max-content;
+  min-width: fit-content;
   height: max-content;
 }
 .btn-primary {
