--- a/wp-content/themes/carl_manlan/assets/styles/tw.css
+++ b/wp-content/themes/carl_manlan/assets/styles/tw.css
@@ -79,8 +79,8 @@
 }
 
 [class*='btn-'] {
-  @apply px-6 py-2 rounded-full uppercase max-w-max cursor-pointer;
-  min-width: max-content;
+  @apply px-6 py-2 rounded-full uppercase max-w-max cursor-pointer text-center;
+  min-width: fit-content;
   height: max-content;
 }
 
